@@ -107,6 +107,9 @@ database {
 # Locale.
 locale "en_US";
 
+# Logging to IRC. Uncomment this and set it to setup an IRC logchan.
+# logchan "Freenode/#logchan";
+
 # Expire logs in days. 0 disables.
 expire_logs 15;
 
